--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,9 @@ language: python
 python:
   - "2.7"
   - "3.4"
-setup: python setup.py install
-script: py.test
+install:
+  - pip install flake8
+  - pip install tox
+  - make install
+script:
+  - make flake8 test
