--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,9 @@ envlist = py27, py34
 
 [testenv]
 commands =
-  py.test
+  coverage run --include=tombstones/* -m py.test
+  coverage report -m
 deps =
-    pytest
-    mock
+  pytest
+  mock
+  coverage
